prodMetadata/src/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Default</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Canceled</fullName>
        </values>
        <values>
            <fullName>Completed - Ready for Testing</fullName>
        </values>
        <values>
            <fullName>Deployed %2F Complete</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>More Info Needed</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Solution Drafted</fullName>
        </values>
        <values>
            <fullName>Under Review</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>ExP Client Case</fullName>
        <description>Support Process for Client Cases</description>
        <isActive>true</isActive>
        <values>
            <fullName>Backlog</fullName>
        </values>
        <values>
            <fullName>Canceled</fullName>
        </values>
        <values>
            <fullName>Completed - Ready for Testing</fullName>
        </values>
        <values>
            <fullName>Deployed %2F Complete</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>More Info Needed</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Re-opened</fullName>
        </values>
        <values>
            <fullName>Ready to Deploy to Production</fullName>
        </values>
        <values>
            <fullName>Triaged</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Referral Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Active</fullName>
        </values>
        <values>
            <fullName>Awaiting Assignment</fullName>
        </values>
        <values>
            <fullName>Awaiting Intake</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Waiting on Client</fullName>
        </values>
        <values>
            <fullName>Waiting on Resource</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Salesforce Support</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Backlog</fullName>
        </values>
        <values>
            <fullName>Canceled</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Completed - Ready for Testing</fullName>
        </values>
        <values>
            <fullName>Deployed %2F Complete</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>More Info Needed</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Re-opened</fullName>
        </values>
        <values>
            <fullName>Ready to Deploy to Production</fullName>
        </values>
        <values>
            <fullName>Solution Drafted</fullName>
        </values>
        <values>
            <fullName>Triaged</fullName>
        </values>
        <values>
            <fullName>Under Review</fullName>
        </values>
        <values>
            <fullName>User Review%2FUAT</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Simple</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Approved</fullName>
        </values>
        <values>
            <fullName>More Info Needed</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Rejected</fullName>
        </values>
        <values>
            <fullName>Under Review</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Active_Duty_End_Date__c</fullName>
        <formula>Contact.Active_Duty_End_Date__c</formula>
        <label>Dates of Service End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Active_Duty_Start_Date__c</fullName>
        <formula>Contact.Active_Duty_Start_Date__c</formula>
        <label>Dates of Service Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Hours__c</fullName>
        <label>Actual Hours</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Annual_Family_income__c</fullName>
        <label>Annual Family income</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the person who is currently responsible for the case.</description>
        <inlineHelpText>This is the person who is currently responsible for the case.</inlineHelpText>
        <label>Assigned To (deprec)</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assignee_Name__c</fullName>
        <description>This is used when the case is assigned to a person who is not a Salesforce user.</description>
        <inlineHelpText>This is used when the case is assigned to a person who is not a Salesforce user.</inlineHelpText>
        <label>External Assignee Name</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>At_risk_for_Homelessness__c</fullName>
        <defaultValue>false</defaultValue>
        <label>At risk for homelessness</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Audience_Product__c</fullName>
        <inlineHelpText>Please indicate to whom you are sending this information and what it will be used for. For example, “quote for an AP Reporter,” “one pager for a high-level donor,” or “PowerPoint for a Nike Executive.” The more we know, the better we can frame the info.</inlineHelpText>
        <label>Audience/Product</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Avg_Case_Manager_Customer_Service__c</fullName>
        <formula>Case_Manager_Customer_Service_sum__c/Case_Manager_Customer_Service_count__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Avg. Case Manager Customer Service</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Branch_of_Service__c</fullName>
        <formula>TEXT(Contact.Branch_of_Service__c)</formula>
        <label>Branch of Service</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_to_use_for_mailing__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign to use for mailing</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Cases using this Campaign</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cancelled_by_Client__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>No longer wants assistance</inlineHelpText>
        <label>Canceled by Client</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_Email__c</fullName>
        <description>May be different from Contact email if specified by the contact.</description>
        <inlineHelpText>May be different from Contact email if specified by the contact.</inlineHelpText>
        <label>Case Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Case_Manager_Customer_Service_count__c</fullName>
        <label>Case Manager Customer Service (count)</label>
        <summaryFilterItems>
            <field>Referral__c.Case_Manager_Customer_Service__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>Referral__c.Case__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Case_Manager_Customer_Service_sum__c</fullName>
        <label>Case Manager Customer Service (sum)</label>
        <summarizedField>Referral__c.Case_Manager_Customer_Service__c</summarizedField>
        <summaryFilterItems>
            <field>Referral__c.Case_Manager_Customer_Service__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>Referral__c.Case__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Case_Phone__c</fullName>
        <description>May be different from Contact phone if specified by the contact.</description>
        <inlineHelpText>May be different from Contact phone if specified by the contact.</inlineHelpText>
        <label>Case Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Change_in_Stress_Level__c</fullName>
        <formula>Most_Recent_Stress_Level__c - Stress_Level_at_Intake__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Change in Stress Level</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CnP_PaaS__Recurring__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recurring ID</label>
        <referenceTo>CnP_PaaS__CnPRecurring__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Combat_Related_Special_Compensation__c</fullName>
        <label>Combat Related Special Compensation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Conference_Room__c</fullName>
        <label>Conference Room</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Alpha</fullName>
                </value>
                <value>
                    <fullName>Bravo</fullName>
                </value>
                <value>
                    <fullName>Charlie</fullName>
                </value>
                <value>
                    <fullName>Delta</fullName>
                </value>
                <value>
                    <fullName>Echo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <formula>Contact.Email</formula>
        <label>Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Lost__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not responsive</inlineHelpText>
        <label>Contact Lost</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Phone__c</fullName>
        <formula>Contact.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Preference__c</fullName>
        <inlineHelpText>How do you prefer to be contacted?</inlineHelpText>
        <label>Contact Preference</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>COV</fullName>
                </value>
                <value>
                    <fullName>No Preference</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Zip__c</fullName>
        <formula>Contact.MailingPostalCode</formula>
        <label>Contact Zip</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_s_Age__c</fullName>
        <description>Calculates Age of Contact by Birthdate of Contact</description>
        <formula>YEAR(TODAY()) - YEAR( Contact.Birthdate  ) - 
IF( 
OR ( 
MONTH(TODAY()) &lt; MONTH( Contact.Birthdate  ), 
AND( 
MONTH(TODAY()) == MONTH(Contact.Birthdate  ), 
DAY(TODAY()) &lt; DAY(Contact.Birthdate  ) 
) 
), 
1, 
0 
)</formula>
        <label>Contact&apos;s Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Created_after_Chat_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>For Sys Admins: check if case was created after a chat or email</inlineHelpText>
        <label>Created after Chat/Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current_Housing_Living_Status__c</fullName>
        <label>Current Housing / Living Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Own Home</fullName>
                </value>
                <value>
                    <fullName>Rental</fullName>
                </value>
                <value>
                    <fullName>Emergency Shelter</fullName>
                </value>
                <value>
                    <fullName>Transitional Housing</fullName>
                </value>
                <value>
                    <fullName>Supportive Housing</fullName>
                </value>
                <value>
                    <fullName>Substance Abuse Treatment Facility</fullName>
                </value>
                <value>
                    <fullName>Community Residence</fullName>
                </value>
                <value>
                    <fullName>VA Facility</fullName>
                </value>
                <value>
                    <fullName>Healthcare Facility</fullName>
                </value>
                <value>
                    <fullName>Homeless</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Living with family / dependents</fullName>
                </value>
                <value>
                    <fullName>Living with friends / others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_Time_of_Completed_Intake__c</fullName>
        <label>Date/Time of Completed Intake</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Time_of_First_Referral__c</fullName>
        <label>Date/Time of First Referral</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Time_of_Initial_Request__c</fullName>
        <label>Date/Time of Initial Request</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Time_of_Permanent_VTM_Outreach__c</fullName>
        <label>Date/Time of Permanent VTM Outreach</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Days_Open__c</fullName>
        <formula>IF(IsClosed, 
ROUND(ClosedDate - CreatedDate, 0), ROUND((NOW() - CreatedDate),0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Open</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Department_Requesting__c</fullName>
        <label>Department Requesting</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Commo</fullName>
                </value>
                <value>
                    <fullName>Digital</fullName>
                </value>
                <value>
                    <fullName>Executive Office</fullName>
                </value>
                <value>
                    <fullName>Field</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Operations</fullName>
                </value>
                <value>
                    <fullName>People</fullName>
                </value>
                <value>
                    <fullName>Policy</fullName>
                </value>
                <value>
                    <fullName>Resources</fullName>
                </value>
                <value>
                    <fullName>RRRP</fullName>
                </value>
                <value>
                    <fullName>Events</fullName>
                </value>
                <value>
                    <fullName>HEEC</fullName>
                </value>
                <value>
                    <fullName>Member Strategy</fullName>
                </value>
                <value>
                    <fullName>Partnerships</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Departmental_Priority__c</fullName>
        <label>Departmental Priority</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deployment_End_Date__c</fullName>
        <formula>Contact.Deployment_End_Date__c</formula>
        <label>Deployment End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deployment_Start_Date__c</fullName>
        <formula>Contact.Deployment_Start_Date__c</formula>
        <label>Deployment Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Discharge_Status2__c</fullName>
        <formula>TEXT(Contact.Discharge_Status__c)</formula>
        <label>Discharge Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discharge_Status__c</fullName>
        <label>Discharge Status (Deprecated)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Honorable</fullName>
                </value>
                <value>
                    <fullName>General under Honorable</fullName>
                </value>
                <value>
                    <fullName>Other Than Honorable</fullName>
                </value>
                <value>
                    <fullName>Dishonorable</fullName>
                </value>
                <value>
                    <fullName>Bad Conduct</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Draft__c</fullName>
        <label>Draft</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Due_Date_Requested__c</fullName>
        <inlineHelpText>Please enter the date by which you require the information you are requesting.</inlineHelpText>
        <label>Due Date Requested</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email_Graphic__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Graphic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Range__c</fullName>
        <description>If this is a regional email, within what radius of the locality?</description>
        <inlineHelpText>If this is a regional email, within what radius of the locality?</inlineHelpText>
        <label>Email Range</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Emergency_Contact__c</fullName>
        <label>Emergency Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employment__c</fullName>
        <label>Employment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Contract/Per-Diem</fullName>
                </value>
                <value>
                    <fullName>Full Time</fullName>
                </value>
                <value>
                    <fullName>Paid Internship</fullName>
                </value>
                <value>
                    <fullName>Part Time</fullName>
                </value>
                <value>
                    <fullName>Retired</fullName>
                </value>
                <value>
                    <fullName>Self-employed</fullName>
                </value>
                <value>
                    <fullName>Student (full-time)</fullName>
                </value>
                <value>
                    <fullName>Student (part-time)</fullName>
                </value>
                <value>
                    <fullName>Temporary</fullName>
                </value>
                <value>
                    <fullName>Unemployed</fullName>
                </value>
                <value>
                    <fullName>Unpaid Internship</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <label>Error Message</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Estimated_Hours__c</fullName>
        <label>Estimated Hours</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimated_Resolution_Date__c</fullName>
        <label>Estimated Resolution Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ethnicity__c</fullName>
        <label>Ethnicity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>American Indian/Native American</fullName>
                </value>
                <value>
                    <fullName>Asian</fullName>
                </value>
                <value>
                    <fullName>Black/African American</fullName>
                </value>
                <value>
                    <fullName>Hispanic/Latino</fullName>
                </value>
                <value>
                    <fullName>Pacific Islander</fullName>
                </value>
                <value>
                    <fullName>White (not Hispanic/Latino)</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Event_Date_Time__c</fullName>
        <label>Event Date &amp; Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Event_Date_and_Time__c</fullName>
        <description>For rucksack Requests - when is the event taking place?</description>
        <label>Event Date and Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Expected_Outcomes_from_Participating__c</fullName>
        <inlineHelpText>Why should we participate in this external engagement? Reasons might include funding, exposure, membership...</inlineHelpText>
        <label>Expected Outcome(s) from Participating</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FA_Response__c</fullName>
        <externalId>true</externalId>
        <label>FA Response #</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facebook__c</fullName>
        <description>Language (2-3 sentences max)</description>
        <inlineHelpText>Language (2-3 sentences max)</inlineHelpText>
        <label>Facebook</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Family_Income__c</fullName>
        <label>Family Income</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0-15,000</fullName>
                </value>
                <value>
                    <fullName>16-30,000</fullName>
                </value>
                <value>
                    <fullName>31-60,000</fullName>
                </value>
                <value>
                    <fullName>61-100,000</fullName>
                </value>
                <value>
                    <fullName>100,000+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Final_Confirmation_Instructions__c</fullName>
        <description>i.e. ticket delivery methods</description>
        <inlineHelpText>i.e. ticket delivery methods</inlineHelpText>
        <label>Final Confirmation Instructions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <formula>Contact.FirstName</formula>
        <label>First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flash_Profiler_Graphic_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Flash Profiler Graphic Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Form_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>FormAssembly form to collect data on the web needs to be built.</description>
        <inlineHelpText>FormAssembly form to collect data on the web needs to be built.</inlineHelpText>
        <label>Form Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Male</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Healthcare__c</fullName>
        <label>Healthcare</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>VA</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Highest_Level_of_Education__c</fullName>
        <label>Highest Level of Education</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Did not graduate</fullName>
                </value>
                <value>
                    <fullName>High School</fullName>
                </value>
                <value>
                    <fullName>Some College</fullName>
                </value>
                <value>
                    <fullName>2 year degree</fullName>
                </value>
                <value>
                    <fullName>4 year degree</fullName>
                </value>
                <value>
                    <fullName>Masters degree</fullName>
                </value>
                <value>
                    <fullName>Ph.D. degree</fullName>
                </value>
                <value>
                    <fullName>Trade School graduate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>How_did_you_hear_about_us__c</fullName>
        <label>How did you hear about us?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>How_many_users_are_impacted__c</fullName>
        <label>How many users are impacted?</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IAVA_Brand_to_Be_Used_for_Marketing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IAVA Brand to Be Used for Marketing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Intake_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Intake Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Intake_Form_Completed_Date__c</fullName>
        <description>Date the Intake Form was Completed</description>
        <inlineHelpText>Date the Intake Form was Completed</inlineHelpText>
        <label>Intake Form Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Intake_Never_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Intake Never Completed</inlineHelpText>
        <label>Intake Never Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Intake_Step_Completed__c</fullName>
        <description>Which step of the intake wizard did the user complete (for COV intake)</description>
        <inlineHelpText>Which step of the intake wizard did the user complete (for COV intake)</inlineHelpText>
        <label>Intake Step Completed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Intervention_Treatment_Plan__c</fullName>
        <label>Intervention Treatment Plan</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Last_Case_Comment_By__c</fullName>
        <label>Last Case Comment By</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Case_Comment_Date__c</fullName>
        <inlineHelpText>Last case comment date</inlineHelpText>
        <label>Last Case Comment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <formula>Contact.LastName</formula>
        <label>Last Name</label>
        <type>Text</type>
    </fields>
</CustomObject>